[DONE] attendance create route and controller added
