# src/api/v1/attendance/controllers/create.js
@@ -1,0 +1,24 @@
+const attendanceService = require("../../../../lib/attendance");
+
+const create = async (req, res, next) => {
+  const { date, event } = req.body;
+
+  try {
+    const attendance = await attendanceService.createAttendance({
+      date,
+      event,
+    });
+
+    const response = {
+      code: 201,
+      message: "Attendance created successfully",
+      data: { ...attendance },
+    };
+
+    res.status(201).json(response);
+  } catch (error) {
+    next(error);
+  }
+};
+
+module.exports = create;
